--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -1,8 +1,8 @@
 
 /* Big tablets to 1200px: from 1023 to 1200px */
 @media only screen and (max-width: 1200px){
-	.home li{font-size: 150%}
-	.sticky {width: 75%}
+	.home li{display: none}
+
 	.main-nav { display: none; }
     .mobile-nav-icon {display: inline-block;}
     
@@ -44,8 +44,8 @@
 /* Small tablets to big tablets: from 768 to 1023px */
 @media only screen and (max-width: 1023px){
 	
-	.home li{font-size: 150%}
-	.sticky {width: 75%}
+	.home li{display: none}
+
 	.main-nav { display: none; }
     .mobile-nav-icon {display: inline-block;}
     
@@ -126,8 +126,8 @@
 /* Small phones to small tablets: from 481 to 767px */
 @media only screen and (max-width: 767px){
 	
-	.home li{font-size: 150%}
-     .sticky {width: 60%}
+	.home li{display: none}
+  
 	.main-nav { display: none; }
     .mobile-nav-icon {display: inline-block;}
     
@@ -209,9 +209,8 @@
 /* Small phones: iphone 6/7/8/8 plus */
 @media screen and (width: 414px) and (height: 736px), (width: 375px) and (height: 812px), (width: 375px) and (height: 667px),(width: 360px) and (height: 640px)  {
 	
-	.home li{font-size: 150%}
-	
-	.sticky {width: 60%}
+	.home li{display: none}
+
 	
 	.main-nav { display: none; }
     .mobile-nav-icon {display: inline-block;}
@@ -283,8 +282,7 @@
 /* Small phones: from 0px to 481px and iphone 5/SE */
 @media screen  and  (width: 320px) and (height: 568px), (max-width: 481px){
 	
-	.home li{font-size: 150%}
-	.sticky {width:50% }
+	.home li{display: none}
 	
 	.main-nav { display: none; }
     .mobile-nav-icon {display: inline-block;}
