--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -378,7 +378,7 @@ h2:after {
 	width: 60%;
 	margin: 0 auto;
 	margin-left: 160px;
-	font-family: 'Lato', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 }
 
 input[type=email],
