--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -200,9 +200,9 @@
 	
 	.zuluwear {display: none}
 	
-	.section-features {height: 100vh}
+	.section-features {height: 190vh}
 	
-	.section-featuress {height: 160vh}
+	.section-featuress {height: 190vh}
 	
 	
 	
@@ -211,7 +211,6 @@
 	background-image:linear-gradient(rgba(14, 14, 56, 0.58),rgba(8, 8, 34, 0.05) ), url(img/minniee.jpg);
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
-	height: 70vh;
 
    }
 	
@@ -285,7 +284,7 @@
 	background-image:linear-gradient(rgba(14, 14, 56, 0.58),rgba(8, 8, 34, 0.05) ), url(img/minniee.jpg);
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
-	height: 190vh;
+
 
    }
 	
@@ -300,8 +299,9 @@
 	margin-bottom: 30px;
 		
      }
-	
+	.section-features, .section-featuress, .section-featuresss {height: 220vh;}
 
+ 
 }
  
 	
