--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -146,7 +146,7 @@
 }
 
 
-/* ipad pro */
+/* ipad pro 
 
 
 @media screen and (width: 1024px) and (height: 1366px) {
@@ -275,7 +275,7 @@
 
 
 
-/* ipad */
+/* ipad 
 
 
 @media screen and (width: 768px) and (height: 1024px) {
