--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -64,6 +64,10 @@
 	
 }
 
+
+	
+
+
 /* Small phones to small tablets: from 481 to 767px */
 @media only screen and (max-width: 767px){
 	
@@ -146,12 +150,100 @@
 }
 
 
+/* Small phones: from 0px to 481px  */
+@media only screen and (max-width: 481px){
+	
+	.home li{display: none}
+	
+	.main-nav { display: none; }
+    .mobile-nav-icon {display: inline-block;}
+    
+    .main-nav {
+        float: left;
+        margin-top: 30px;
+        margin-left: 25px;
+    }
+    
+    .main-nav li {
+        display: block;
+    }
+    
+    .main-nav li a:link,
+    .main-nav li a:visited {
+        display: block;
+        border: 0;
+        padding: 10px 0;
+        font-size: 100%;
+    }
+    
+    .sticky .main-nav { margin-top: 10px; }
+
+    .sticky .main-nav li a:link,
+    .sticky .main-nav li a:visited { padding: 10px 0; }
+    .sticky .mobile-nav-icon { margin-top: 10px; }
+    .sticky .mobile-nav-icon i { color: #555; }
+   
+	
+	
+	.minnie-text-box {
+	top: 40%;
+	left:20%;
+    
+	}
+
+    .intro { 
+		
+	    font-size: 80%;
+		padding: 20px 10px;
+	    
+	   }
+	
+	.columnnn {margin-top: 860px;}
+	
+	.columnn{margin-top: 470px}
+	
+	.up{padding: 100px 50px}
+	
+	.zuluwear {display: none}
+	
+	.section-features{ height: 180vh} 
+	
+	.section-featuress{height:  220vh}
+	
+	.section-featuresss {height:  120vh}
+	
+	.section-featuresss {
+	
+	background-image:linear-gradient(rgba(14, 14, 56, 0.58),rgba(8, 8, 34, 0.05) ), url(img/minniee.jpg);
+	background-repeat: no-repeat;
+	background-size: 100% 100%;
+   
+   }
+	
+	.columns {margin-bottom: 150px}
+	
+	.center {font-size: 200%}
+	
+	.contact {margin-top: 400px }
+	
+	.social-links {left: 25%}
+	
+	.h2:after{margin-bottom: 10px}
+	
+	input[type=submit] {background-color: #910921}
+	
+
+   
+}
+ 
+
+
 
 
 /* Small phones: iphone 6/7/8plus */
 
 
-@media screen and (width: 414px) and (height: 736px) {
+@media only screen and (width: 414px) and (height: 736px) {
 	
 	
 	
@@ -245,7 +337,7 @@
 /* Small phones: iphone 6/7/8 */
 
 
-@media screen and (width: 375px) and (height: 667px) {
+@media only screen and (width: 375px) and (height: 667px) {
 	
 	
 	
@@ -327,7 +419,7 @@
 /* Small phones: iphone X */
 
 
-@media screen and (width: 375px) and (height: 812px) {
+@media only screen and (width: 375px) and (height: 812px) {
 	
 	
 	
@@ -417,366 +509,8 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* Small phones: iphone 6/7/8/8 plus 
-@media screen and (width: 414px) and (height: 736px) {
-	
-	
-	
-	.home li{display: none}
-
-	
-	.main-nav { display: none; }
-    .mobile-nav-icon {display: inline-block;}
-    
-    .main-nav {
-        float: left;
-        margin-top: 30px;
-        margin-left: 25px;
-    }
-    
-    .main-nav li {
-        display: block;
-    }
-    
-    .main-nav li a:link,
-    .main-nav li a:visited {
-        display: block;
-        border: 0;
-        padding: 10px 0;
-        font-size: 100%;
-    }
-    
-    .sticky .main-nav { margin-top: 10px; }
-
-    .sticky .main-nav li a:link,
-    .sticky .main-nav li a:visited { padding: 10px 0; }
-    .sticky .mobile-nav-icon { margin-top: 10px; }
-    .sticky .mobile-nav-icon i { color: #555; }
-   
-	
-	.minnie-text-box {
-	top: 40%;
-	left:20%;
-    
-	}
-
-    .intro { 
-		
-	    font-size: 80%;
-		padding: 50px 50px;
-	    
-	}
-	
-	.columnnn {margin-top: 730px;}
-	
-	.columnn{margin-top: 400px}
-	
-	.zuluwear {display: none}
-	
-	
-	
-	
-	.section-featuresss {
-	
-	background-image:linear-gradient(rgba(14, 14, 56, 0.58),rgba(8, 8, 34, 0.05) ), url(img/minniee.jpg);
-	background-repeat: no-repeat;
-	background-size: 100% 100%;
-   
-   }
-	
-	.center {font-size: 200%}
-	
-	.social-links {left: 25%}
-	
-	input[type=submit] {background-color: #910921}
-
-   
-}
-
-/* Small phones: iphone 6/7/8/8 plus 
-@media screen and  (width: 375px) and (height: 667px) {
-	
-	
-	
-	.home li{display: none}
-
-	
-	.main-nav { display: none; }
-    .mobile-nav-icon {display: inline-block;}
-    
-    .main-nav {
-        float: left;
-        margin-top: 30px;
-        margin-left: 25px;
-    }
-    
-    .main-nav li {
-        display: block;
-    }
-    
-    .main-nav li a:link,
-    .main-nav li a:visited {
-        display: block;
-        border: 0;
-        padding: 10px 0;
-        font-size: 100%;
-    }
-    
-    .sticky .main-nav { margin-top: 10px; }
-
-    .sticky .main-nav li a:link,
-    .sticky .main-nav li a:visited { padding: 10px 0; }
-    .sticky .mobile-nav-icon { margin-top: 10px; }
-    .sticky .mobile-nav-icon i { color: #555; }
-   
-	
-	.minnie-text-box {
-	top: 40%;
-	left:20%;
-    
-	}
-
-    .intro { 
-		
-	    font-size: 80%;
-		padding: 50px 5px;
-	    
-	}
-	
-	.columnnn {margin-top: 730px;}
-	
-	.columnn{margin-top: 400px}
-	
-	.zuluwear {display: none}
-	
-	.section-features {height: 190vh}
-	
-	.section-featuress {height: 190vh}
-	
-	
-	
-	.section-featuresss {
-	
-	background-image:linear-gradient(rgba(14, 14, 56, 0.58),rgba(8, 8, 34, 0.05) ), url(img/minniee.jpg);
-	background-repeat: no-repeat;
-	background-size: 100% 100%;
-
-   }
-	
-	.center {font-size: 200%}
-	
-	.social-links {left: 25%}
-	
-	input[type=submit] {background-color: #910921}
-
-   
-	
-	
-}
-
-
-/* Small phones: iphone 6/7/8/8 plus 
-@media screen and (width: 360px) and (height: 640px) {
-	
-	
-	
-	.home li{display: none}
-
-	
-	.main-nav { display: none; }
-    .mobile-nav-icon {display: inline-block;}
-    
-    .main-nav {
-        float: left;
-        margin-top: 30px;
-        margin-left: 25px;
-    }
-    
-    .main-nav li {
-        display: block;
-    }
-    
-    .main-nav li a:link,
-    .main-nav li a:visited {
-        display: block;
-        border: 0;
-        padding: 10px 0;
-        font-size: 100%;
-    }
-    
-    .sticky .main-nav { margin-top: 10px; }
-
-    .sticky .main-nav li a:link,
-    .sticky .main-nav li a:visited { padding: 10px 0; }
-    .sticky .mobile-nav-icon { margin-top: 10px; }
-    .sticky .mobile-nav-icon i { color: #555; }
-   
-	
-	.minnie-text-box {
-	top: 40%;
-	left:20%;
-    
-	}
-
-    .intro { 
-		
-	    font-size: 80%;
-		padding: 50px 5px;
-	    
-	}
-	
-	.columnnn {margin-top: 730px;}
-	
-	.columnn{margin-top: 400px}
-	
-	.zuluwear {display: none}
-	
-	.section-features {height: 190vh}
-	
-	.section-featuress {height: 190vh}
-	
-	
-	
-	.section-featuresss {
-	
-	background-image:linear-gradient(rgba(14, 14, 56, 0.58),rgba(8, 8, 34, 0.05) ), url(img/minniee.jpg);
-	background-repeat: no-repeat;
-	background-size: 100% 100%;
-
-   }
-	
-	.center {font-size: 200%}
-	
-	.social-links {left: 25%}
-	
-	input[type=submit] {background-color: #910921}
-
-   
-	
-	
-	
-}
-  
-
-/* Small phones: iphone 6/7/8/8 plus 
-@media screen and (width: 414px) and (height: 736px){
-	
-	
-	.home li{display: none}
-
-	
-	.main-nav { display: none; }
-    .mobile-nav-icon {display: inline-block;}
-    
-    .main-nav {
-        float: left;
-        margin-top: 30px;
-        margin-left: 25px;
-    }
-    
-    .main-nav li {
-        display: block;
-    }
-    
-    .main-nav li a:link,
-    .main-nav li a:visited {
-        display: block;
-        border: 0;
-        padding: 10px 0;
-        font-size: 100%;
-    }
-    
-    .sticky .main-nav { margin-top: 10px; }
-
-    .sticky .main-nav li a:link,
-    .sticky .main-nav li a:visited { padding: 10px 0; }
-    .sticky .mobile-nav-icon { margin-top: 10px; }
-    .sticky .mobile-nav-icon i { color: #555; }
-   
-	
-	.minnie-text-box {
-	top: 40%;
-	left:20%;
-    
-	}
-
-    .intro { 
-		
-	    font-size: 80%;
-		padding: 50px 5px;
-	    
-	}
-	
-	.columnnn {margin-top: 730px;}
-	
-	.columnn{margin-top: 400px}
-	
-	.zuluwear {display: none}
-	
-	.section-features {height: 190vh}
-	
-	.section-featuress {height: 190vh}
-	
-	
-	
-	.section-featuresss {
-	
-	background-image:linear-gradient(rgba(14, 14, 56, 0.58),rgba(8, 8, 34, 0.05) ), url(img/minniee.jpg);
-	background-repeat: no-repeat;
-	background-size: 100% 100%;
-
-   }
-	
-	.center {font-size: 200%}
-	
-	.social-links {left: 25%}
-	
-	input[type=submit] {background-color: #910921}
-
-   
-	
-}
-
-
-
-
-/* Small phones: from 0px to 481px and iphone 5/SE 
-@media screen  and  (width: 320px) and (height: 568px), (max-width: 481px){
+/* Small phones: from 0px to 481px and iphone 5/SE */
+@media only screen  and  (width: 320px) and (height: 568px), (max-width: 374px){
 	
 	.home li{display: none}
 	
